--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,12 +5,24 @@ services:
       dockerfile: dockerfile.dev
     container_name: vault-module
     ports:
-      - "5433:8200"
-      - "5434:8201"
+      - 5433:8200
+      - 5434:8201
     cap_add:
       - IPC_LOCK
     networks:
       - internal_network
+    healthcheck:
+      test:
+        - CMD
+        - wget
+        - --spider
+        - --proxy
+        - 'off'
+        - http://vault-module:8200/v1/sys/health?standbyok=true
+      interval: 10s
+      timeout: 3s
+      retries: 10
+      start_period: 5s
 
   vault-seeder:
     build:
@@ -18,7 +30,7 @@ services:
       dockerfile: seeder.dev.dockerfile
     depends_on:
       - vault-module
-    network_mode: "service:vault-module"
+    network_mode: service:vault-module
     env_file:
       - env/.dev.env
 
@@ -31,7 +43,7 @@ services:
       - VITE_PORT=5173
       - CHOKIDAR_USEPOLLING=true
     ports:
-      - "5173:5173"
+      - 5173:5173
     volumes:
       - ../frontend:/app:delegated
       - /app/node_modules
@@ -39,6 +51,9 @@ services:
       - internal_network
     env_file:
       - env/.dev.env
+    depends_on:
+      gateway-service:
+        condition: service_healthy
 
   db-service:
     build:
@@ -46,7 +61,7 @@ services:
       dockerfile: dockerfile.dev
     container_name: db-service
     ports:
-      - "5432:3000"
+      - 5432:3000
     volumes:
       - ../services/db-service:/app
     working_dir: /app
@@ -61,7 +76,7 @@ services:
       dockerfile: dockerfile.dev
     container_name: auth-service
     ports:
-      - "4001:3000"
+      - 4001:3000
     volumes:
       - ../services/auth-service:/app
     working_dir: /app
@@ -69,6 +84,9 @@ services:
       - internal_network
     env_file:
       - env/.dev.env
+    depends_on:
+      db-service:
+        condition: service_healthy
 
   chat-service:
     build:
@@ -76,7 +94,7 @@ services:
       dockerfile: dockerfile.dev
     container_name: chat-service
     ports:
-      - "4002:3000"
+      - 4002:3000
     volumes:
       - ../services/chat-service:/app
     working_dir: /app
@@ -84,6 +102,9 @@ services:
       - internal_network
     env_file:
       - env/.dev.env
+    depends_on:
+      gateway-service:
+        condition: service_healthy
 
   gateway-service:
     build:
@@ -91,7 +112,7 @@ services:
       dockerfile: dockerfile.dev
     container_name: gateway-service
     ports:
-      - "4003:3000"
+      - 4003:3000
     volumes:
       - ../services/gateway-service:/app
     working_dir: /app
@@ -99,6 +120,15 @@ services:
       - internal_network
     env_file:
       - env/.dev.env
+    depends_on:
+      auth-service:
+        condition: service_healthy
+      user-service:
+        condition: service_healthy
+      db-service:
+        condition: service_healthy
+      media-service:
+        condition: service_healthy
 
   lobby-service:
     build:
@@ -106,7 +136,7 @@ services:
       dockerfile: dockerfile.dev
     container_name: lobby-service
     ports:
-      - "4004:3000"
+      - 4004:3000
     volumes:
       - ../services/lobby-service:/app
     working_dir: /app
@@ -114,6 +144,9 @@ services:
       - internal_network
     env_file:
       - env/.dev.env
+    depends_on:
+      gateway-service:
+        condition: service_healthy
 
   matchmaking-service:
     build:
@@ -121,7 +154,7 @@ services:
       dockerfile: dockerfile.dev
     container_name: matchmaking-service
     ports:
-      - "4005:3000"
+      - 4005:3000
     volumes:
       - ../services/matchmaking-service:/app
     working_dir: /app
@@ -129,6 +162,9 @@ services:
       - internal_network
     env_file:
       - env/.dev.env
+    depends_on:
+      gateway-service:
+        condition: service_healthy
 
   notification-service:
     build:
@@ -136,7 +172,7 @@ services:
       dockerfile: dockerfile.dev
     container_name: notification-service
     ports:
-      - "4006:3000"
+      - 4006:3000
     volumes:
       - ../services/notification-service:/app
     working_dir: /app
@@ -144,6 +180,9 @@ services:
       - internal_network
     env_file:
       - env/.dev.env
+    depends_on:
+      gateway-service:
+        condition: service_healthy
 
   tournament-service:
     build:
@@ -151,7 +190,7 @@ services:
       dockerfile: dockerfile.dev
     container_name: tournament-service
     ports:
-      - "4007:3000"
+      - 4007:3000
     volumes:
       - ../services/tournament-service:/app
     working_dir: /app
@@ -159,6 +198,9 @@ services:
       - internal_network
     env_file:
       - env/.dev.env
+    depends_on:
+      gateway-service:
+        condition: service_healthy
 
   user-service:
     build:
@@ -166,7 +208,7 @@ services:
       dockerfile: dockerfile.dev
     container_name: user-service
     ports:
-      - "4008:3000"
+      - 4008:3000
     volumes:
       - ../services/user-service:/app
     working_dir: /app
@@ -174,6 +216,9 @@ services:
       - internal_network
     env_file:
       - env/.dev.env
+    depends_on:
+      db-service:
+        condition: service_healthy
 
   media-service:
     build:
@@ -181,7 +226,7 @@ services:
       dockerfile: dockerfile.dev
     container_name: media-service
     ports:
-      - "4009:3000"
+      - 4009:3000
     volumes:
       - ../services/media-service:/app
     working_dir: /app
@@ -189,12 +234,15 @@ services:
       - internal_network
     env_file:
       - env/.dev.env
+    depends_on:
+      db-service:
+        condition: service_healthy
 
   prometheus-module:
     image: prom/prometheus:latest
     container_name: prometheus-module
     ports:
-      - "9090:9090"
+      - 9090:9090
     networks:
       - internal_network
     volumes:
@@ -206,7 +254,7 @@ services:
       dockerfile: dockerfile.dev
     container_name: grafana-module
     ports:
-      - "9000:3000"
+      - 9000:3000
     volumes:
       - grafana-data:/var/lib/grafana
     depends_on:
@@ -217,9 +265,8 @@ services:
       - env/.dev.env
 
 volumes:
-  vault-data:
-  grafana-data:
-
+  vault-data: null
+  grafana-data: null
 
 networks:
   internal_network:
