--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ http {
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
-    
+
     map $host $backend {
         hostnames;
         vault.*                     vault;
@@ -53,11 +53,14 @@ http {
             proxy_ssl_verify off;
         }
 
-	    location ^~ /api/ {
-            proxy_pass          http://$api_backend$request_uri;
-            proxy_set_header    Host               $host;
-            proxy_set_header    X-Real-IP          $remote_addr;
-            proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
+        location ^~ /api/ {
+            rewrite ^/api/(.*)$ /$1 break;
+
+            proxy_pass http://$api_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			add_header Cache-Control "no-store";
         }
 
         location / {
