--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -53,6 +53,16 @@ http {
             proxy_ssl_verify off;
         }
 
+        location ^~ /api/ {
+            rewrite ^/api/(.*)$ /$1 break;
+
+            proxy_pass http://$api_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			add_header Cache-Control "no-store";
+        }
+
         location / {
             proxy_pass          http://$backend$request_uri;
             proxy_set_header    Host            $host;
