Update: .example.env

--- a/env/.example.env
+++ b/env/.example.env
@@ -3,4 +3,6 @@ VAULT_TOKEN=XXXX
 VAULT_DEV_ROOT_TOKEN_ID=XXXX
 GF_SECURITY_ADMIN_USER=XXXX
 GF_SECURITY_ADMIN_PASSWORD=XXXX
-NODE_ENV=XXXX
+NODE_ENV=development
+DATABASE_URL=XXXX
+GOOGLE_CALLBACK_URI=XXXX
