--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,21 @@ services:
     restart: always
     env_file:
       - ../data/env/.env.prod
+    healthcheck:
+      test:
+        - CMD
+        - wget
+        - --spider
+        - --proxy
+        - 'off'
+        - http://vault-module:8200/v1/sys/health?standbyok=true
+      interval: 10s
+      timeout: 3s
+      retries: 10
+      start_period: 5s
+    depends_on:
+      nginx-proxy:
+        condition: service_healthy
 
   nginx-proxy:
     image: nginx:alpine
@@ -34,6 +49,12 @@ services:
     networks:
       - internal_network
       - metrics_network
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
 
   frontend:
     build:
@@ -47,6 +68,21 @@ services:
       - internal_network
     env_file:
       - ../data/env/.env.prod
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+    depends_on:
+      notification-service:
+        condition: service_healthy
+      tournament-service:
+        condition: service_healthy
+      matchmaking-service:
+        condition: service_healthy
+      lobby-service:
+        condition: service_healthy
 
   db-service:
     build:
@@ -65,6 +101,15 @@ services:
     restart: always
     env_file:
       - ../data/env/.env.prod
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+    depends_on:
+      gateway-service:
+        condition: service_healthy
 
   auth-service:
     build:
@@ -81,6 +126,15 @@ services:
     restart: always
     env_file:
       - ../data/env/.env.prod
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+    depends_on:
+      db-service:
+        condition: service_healthy
 
   chat-service:
     build:
@@ -97,6 +151,15 @@ services:
     restart: always
     env_file:
       - ../data/env/.env.prod
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+    depends_on:
+      db-service:
+        condition: service_healthy
 
   gateway-service:
     build:
@@ -115,6 +178,9 @@ services:
     restart: always
     env_file:
       - ../data/env/.env.prod
+    depends_on:
+      vault-module:
+        condition: service_healthy
 
   lobby-service:
     build:
@@ -131,6 +197,21 @@ services:
     restart: always
     env_file:
       - ../data/env/.env.prod
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+    depends_on:
+      media-service:
+        condition: service_healthy
+      auth-service:
+        condition: service_healthy
+      user-service:
+        condition: service_healthy
+      chat-service:
+        condition: service_healthy
 
   matchmaking-service:
     build:
@@ -147,6 +228,21 @@ services:
     restart: always
     env_file:
       - ../data/env/.env.prod
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+    depends_on:
+      media-service:
+        condition: service_healthy
+      auth-service:
+        condition: service_healthy
+      user-service:
+        condition: service_healthy
+      chat-service:
+        condition: service_healthy
 
   notification-service:
     build:
@@ -163,6 +259,21 @@ services:
     restart: always
     env_file:
       - ../data/env/.env.prod
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+    depends_on:
+      media-service:
+        condition: service_healthy
+      auth-service:
+        condition: service_healthy
+      user-service:
+        condition: service_healthy
+      chat-service:
+        condition: service_healthy
 
   tournament-service:
     build:
@@ -179,6 +290,21 @@ services:
     restart: always
     env_file:
       - ../data/env/.env.prod
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+    depends_on:
+      media-service:
+        condition: service_healthy
+      auth-service:
+        condition: service_healthy
+      user-service:
+        condition: service_healthy
+      chat-service:
+        condition: service_healthy
 
   user-service:
     build:
@@ -195,6 +321,15 @@ services:
     restart: always
     env_file:
       - ../data/env/.env.prod
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+    depends_on:
+      db-service:
+        condition: service_healthy
 
   media-service:
     build:
@@ -215,6 +350,15 @@ services:
     restart: always
     env_file:
       - ../data/env/.env.prod
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+    depends_on:
+      db-service:
+        condition: service_healthy
 
   prometheus-module:
     image: prom/prometheus:latest
@@ -232,6 +376,15 @@ services:
     networks:
       - metrics_network
       - internal_network
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:9090/-/ready"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 5s
+    depends_on:
+      nginx-proxy:
+        condition: service_healthy
 
   grafana-module:
     build:
@@ -242,11 +395,18 @@ services:
       - "9000:3000"
     volumes:
       - /srv/ft_preavis/data/grafana/data:/var/lib/grafana
-    depends_on:
-      - prometheus-module
     networks:
       - metrics_network
       - internal_network
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/api/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 10s
+    depends_on:
+      prometheus-module:
+        condition: service_healthy
 
 networks:
   metrics_network:
