--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       retries: 10
       start_period: 5s
     depends_on:
-      nginx-proxy:
+      - nginx-proxy
 
   nginx-proxy:
     image: nginx:alpine
@@ -376,7 +376,7 @@ services:
       retries: 5
       start_period: 5s
     depends_on:
-      nginx-proxy:
+      - nginx-proxy
 
   grafana-module:
     build:
