Fix: health check nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,8 @@ services:
       retries: 10
       start_period: 5s
     depends_on:
-      - nginx-proxy
+      nginx-proxy:
+        condition: service_healthy
 
   nginx-proxy:
     image: nginx:alpine
@@ -45,6 +46,12 @@ services:
     networks:
       - internal_network
       - metrics_network
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+      start_period: 3s
 
   frontend:
     build:
@@ -373,7 +380,8 @@ services:
       retries: 10
       start_period: 10s
     depends_on:
-      - nginx-proxy
+      nginx-proxy:
+        condition: service_healthy
 
   grafana-module:
     build:
