--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,17 +35,19 @@ services:
         condition: service_healthy
 
   nginx-proxy:
-    image: nginx:alpine
-    container_name: nginx-proxy
+    build:
+      context: ./nginx
+      container_name: nginx-proxy
     ports:
       - "4443:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - /srv/ft_preavis/data/vault/certs:/vault/certs:ro
       - /srv/ft_preavis/data/nginx/logs:/var/log/nginx
     networks:
       - internal_network
       - metrics_network
+    environment:
+      - WAIT_FOR_HOSTS=vault-module prometheus-module grafana-module
     healthcheck:
       test: ["CMD", "wget", "--spider", "--quiet", "http://localhost"]
       interval: 5s
