--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -4,6 +4,7 @@ FROM nginx:alpine
 COPY nginx.conf /etc/nginx/nginx.conf
 
 CMD sh -c '\
+  touch /tmp/nginx-waiting;\
   for host in $WAIT_FOR_HOSTS; do \
     until getent hosts "$host"; do \
       echo "⏳ Waiting for $host..."; \
