--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,13 +14,6 @@ http {
         default                     frontend;
     }
 
-    map $host $api_backend {
-        hostnames;
-
-        transcendance.charles-poulain.ovh   gateway;
-        default                             $backend;
-    }
-
     access_log /var/log/nginx/access.log main;
     error_log /var/log/nginx/error.log warn;
 
@@ -28,7 +21,6 @@ http {
     upstream vault       { server vault-module:8200; }
     upstream grafana     { server grafana-module:3000; }
     upstream prometheus  { server prometheus-module:9090; }
-    upstream gateway     { server gateway-service:3000; }
     upstream frontend    { server frontend:80; }
 
     server {
@@ -56,7 +48,7 @@ http {
         location ^~ /api/ {
             rewrite ^/api/(.*)$ /$1 break;
 
-            proxy_pass http://$api_backend;
+            proxy_pass http://gateway-service:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
