Can't take it anymore

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,8 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
+
+    resolver 127.0.0.11 valid=30s
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
@@ -14,14 +16,22 @@ http {
         default                     frontend;
     }
 
+    map $host $api_backend {
+        hostnames;
+
+        transcendance.charles-poulain.ovh   gateway;
+        default                             $backend;
+    }
+
     access_log /var/log/nginx/access.log main;
     error_log /var/log/nginx/error.log warn;
 
 
-    upstream vault       { server vault-module:8200; }
-    upstream grafana     { server grafana-module:3000; }
-    upstream prometheus  { server prometheus-module:9090; }
-    upstream frontend    { server frontend:80; }
+    upstream vault       { server vault-module:8200 resolve; }
+    upstream grafana     { server grafana-module:3000 resolve; }
+    upstream prometheus  { server prometheus-module:9090 resolve; }
+    upstream gateway     { server gateway-service:3000 resolve; }
+    upstream frontend    { server frontend:80 resolve; }
 
     server {
         listen       80;
@@ -48,7 +58,7 @@ http {
         location ^~ /api/ {
             rewrite ^/api/(.*)$ /$1 break;
 
-            proxy_pass http://gateway-service:3000;
+            proxy_pass http://$api_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
