Fix: Zone for runtime DNS

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,11 +27,30 @@ http {
     error_log /var/log/nginx/error.log warn;
 
 
-    upstream vault       { server vault-module:8200 resolve; }
-    upstream grafana     { server grafana-module:3000 resolve; }
-    upstream prometheus  { server prometheus-module:9090 resolve; }
-    upstream gateway     { server gateway-service:3000 resolve; }
-    upstream frontend    { server frontend:80 resolve; }
+    upstream vault {
+        zone vault 64k;
+        server vault-module:8200 resolve;
+    }
+
+    upstream grafana {
+        zone grafana 64k;
+        server grafana-module:3000 resolve;
+    }
+
+    upstream prometheus {
+        zone prometheus 64k;
+        server prometheus-module:9090 resolve;
+    }
+
+    upstream gateway {
+        zone gateway 64k;
+        server gateway-service:3000 resolve;
+    }
+
+    upstream frontend {
+        zone frontend 64k;
+        server frontend:80 resolve;
+    }
 
     server {
         listen       80;
