--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,7 +90,7 @@ services:
     env_file:
       - ../data/env/.env.prod
     healthcheck:
-      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/metrics"]
+      test: ["CMD", "curl", "--fail", "--silent", "http://localhost:3000/metrics"]
       interval: 10s
       timeout: 3s
       retries: 5
@@ -115,7 +115,7 @@ services:
     env_file:
       - ../data/env/.env.prod
     healthcheck:
-      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/metrics"]
+      test: ["CMD", "curl", "--fail", "--silent", "http://localhost:3000/metrics"]
       interval: 10s
       timeout: 3s
       retries: 5
@@ -140,7 +140,7 @@ services:
     env_file:
       - ../data/env/.env.prod
     healthcheck:
-      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/metrics"]
+      test: ["CMD", "curl", "--fail", "--silent", "http://localhost:3000/metrics"]
       interval: 10s
       timeout: 3s
       retries: 5
@@ -167,7 +167,7 @@ services:
     env_file:
       - ../data/env/.env.prod
     healthcheck:
-      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/metrics"]
+      test: ["CMD", "curl", "--fail", "--silent", "http://localhost:3000/metrics"]
       interval: 10s
       timeout: 3s
       retries: 5
@@ -196,7 +196,7 @@ services:
     env_file:
       - ../data/env/.env.prod
     healthcheck:
-      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/metrics"]
+      test: ["CMD", "curl", "--fail", "--silent", "http://localhost:3000/metrics"]
       interval: 10s
       timeout: 3s
       retries: 5
@@ -227,7 +227,7 @@ services:
     env_file:
       - ../data/env/.env.prod
     healthcheck:
-      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/metrics"]
+      test: ["CMD", "curl", "--fail", "--silent", "http://localhost:3000/metrics"]
       interval: 10s
       timeout: 3s
       retries: 5
@@ -258,7 +258,7 @@ services:
     env_file:
       - ../data/env/.env.prod
     healthcheck:
-      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/metrics"]
+      test: ["CMD", "curl", "--fail", "--silent", "http://localhost:3000/metrics"]
       interval: 10s
       timeout: 3s
       retries: 5
@@ -289,7 +289,7 @@ services:
     env_file:
       - ../data/env/.env.prod
     healthcheck:
-      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/metrics"]
+      test: ["CMD", "curl", "--fail", "--silent", "http://localhost:3000/metrics"]
       interval: 10s
       timeout: 3s
       retries: 5
@@ -320,7 +320,7 @@ services:
     env_file:
       - ../data/env/.env.prod
     healthcheck:
-      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/metrics"]
+      test: ["CMD", "curl", "--fail", "--silent", "http://localhost:3000/metrics"]
       interval: 10s
       timeout: 3s
       retries: 5
@@ -349,7 +349,7 @@ services:
     env_file:
       - ../data/env/.env.prod
     healthcheck:
-      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:3000/metrics"]
+      test: ["CMD", "curl", "--fail", "--silent", "http://localhost:3000/metrics"]
       interval: 10s
       timeout: 3s
       retries: 5
