--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,64 +2,46 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
-
     resolver 127.0.0.11 valid=300s;
+    resolver_timeout 120s;
+
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
     map $host $backend {
         hostnames;
-        vault.*                     vault;
-        grafana.*                   grafana;
-        prometheus.*                prometheus;
-        default                     frontend;
+        vault.*                     vault-module:8200;
+        grafana.*                   grafana-module:3000;
+        prometheus.*                prometheus-module:9090;
+        default                     frontend:80;
     }
 
     map $host $api_backend {
         hostnames;
+        transcendance.charles-poulain.ovh   gateway-service:3000;
+        default                             $backend;
+    }
 
-        transcendance.charles-poulain.ovh   gateway;
+    map $host $chat_backend {
+        hostnames;
+        transcendance.charles-poulain.ovh   chat-service:3000;
         default                             $backend;
     }
 
     access_log /var/log/nginx/access.log main;
     error_log /var/log/nginx/error.log warn;
 
-
-    upstream vault {
-        zone vault 64k;
-        server vault-module:8200 resolve;
-    }
-
-    upstream grafana {
-        zone grafana 64k;
-        server grafana-module:3000 resolve;
-    }
-
-    upstream prometheus {
-        zone prometheus 64k;
-        server prometheus-module:9090 resolve;
-    }
-
-    upstream gateway {
-        zone gateway 64k;
-        server gateway-service:3000 resolve;
-    }
-
-    upstream frontend {
-        zone frontend 64k;
-        server frontend:80 resolve;
-    }
-
     server {
         listen       80;
         server_name  transcendance.charles-poulain.ovh
                      *.transcendance.charles-poulain.ovh;
 
+        # Optional: redirect root vault domain to UI
         if ($host ~ ^vault\.) {
             rewrite ^/$ /ui/ redirect;
         }
+
         location /ui/ {
             proxy_pass          https://vault-module:8200/ui/;
             proxy_set_header    Host              $host;
@@ -81,7 +63,19 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-			add_header Cache-Control "no-store";
+            add_header Cache-Control "no-store";
+        }
+
+        location /socket/chat/ {
+            proxy_pass http://$chat_backend;
+
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         location / {
