--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,8 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
+    modsecurity on;
+    modsecurity_rules_file /etc/modsecurity/modsecurity.conf;
     resolver 127.0.0.11 valid=300s;
     resolver_timeout 120s;
 
