--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -1,7 +1,8 @@
-FROM nginx:alpine
+FROM owasp/modsecurity-crs:nginx
 
 # Optional: copy your custom config
 COPY nginx.conf /etc/nginx/nginx.conf
+COPY modsecurity.conf /etc/modsecurity/modsecurity.conf
 
 CMD sh -c '\
   touch /tmp/nginx-waiting;\
