--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -4,6 +4,8 @@ FROM owasp/modsecurity-crs:nginx
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY modsecurity.conf /etc/modsecurity/modsecurity.conf
 
+RUN chown -R nginx:nginx /var/log/nginx
+
 CMD sh -c '\
   touch /tmp/nginx-waiting;\
   for host in $WAIT_FOR_HOSTS; do \
