Fix: Nginx broken

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,27 +38,7 @@ http {
 
     server {
         listen       80;
-        server_name  transcendance.charles-poulain.ovh
-                     *.transcendance.charles-poulain.ovh;
-
-        # Optional: redirect root vault domain to UI
-        if ($host ~ ^vault\.) {
-            rewrite ^/$ /ui/ redirect;
-        }
-
-        location /ui/ {
-            proxy_pass          https://vault-module:8200/ui/;
-            proxy_set_header    Host              $host;
-            proxy_ssl_server_name on;
-            proxy_ssl_verify    off;
-        }
-
-        location ^~ /v1/ {
-            proxy_pass https://vault-module:8200$request_uri;
-            proxy_set_header Host $host;
-            proxy_ssl_server_name on;
-            proxy_ssl_verify off;
-        }
+        server_name  transcendance.charles-poulain.ovh;
 
         location ^~ /api/ {
             rewrite ^/api/(.*)$ /$1 break;
@@ -89,4 +69,58 @@ http {
             proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
+
+	server {
+		listen	80;
+		server_name	vault.transcendance.charles-poulain.ovh;
+
+		if ($host ~ ^vault\.) {
+            rewrite ^/$ /ui/ redirect;
+        }
+
+        location /ui/ {
+            proxy_pass          https://vault-module:8200/ui/;
+            proxy_set_header    Host              $host;
+            proxy_ssl_server_name on;
+            proxy_ssl_verify    off;
+        }
+
+        location ^~ /v1/ {
+            proxy_pass https://vault-module:8200$request_uri;
+            proxy_set_header Host $host;
+            proxy_ssl_server_name on;
+            proxy_ssl_verify off;
+        }
+
+		location / {
+			proxy_pass https://vault-module:8200;
+            proxy_set_header Host $host;
+            proxy_ssl_server_name on;
+            proxy_ssl_verify off;
+		}
+	}
+
+	server {
+		listen 80;
+		server_name grafana.transcendance.charles-poulain.ovh;
+
+		location / {
+			proxy_pass http://grafana-module:3000$request_uri;
+            proxy_set_header Host $host;
+            proxy_ssl_server_name on;
+            proxy_ssl_verify off;
+		}
+	}
+
+	server {
+		listen 80;
+		server_name prometheus.transcendance.charles-poulain.ovh;
+
+		location / {
+			proxy_pass http://prometheus-module:9090$request_uri;
+            proxy_set_header Host $host;
+            proxy_ssl_server_name on;
+            proxy_ssl_verify off;
+		}
+	}
 }
