--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -359,12 +359,13 @@ services:
         condition: service_healthy
 
   prometheus-module:
-    image: prom/prometheus:latest
+    build:
+      context: prometheus
+      dockerfile: dockerfile
     container_name: prometheus-module
     user: "0:0"
     volumes:
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - ./prometheus/web.yml:/etc/prometheus/web.yml:ro
+      - ./prometheus/conf_dev:/etc/prometheus
       - /srv/ft_preavis/data/prometheus/data:/prometheus
     ports:
       - "9090:9090"
