--- a/prometheus/conf_prod/prometheus.yml
+++ b/prometheus/conf_prod/prometheus.yml
@@ -1,13 +1,14 @@
 global:
   scrape_interval: 5s
 
+rule_files:
+  - "alerting_rules.yml"
+
 scrape_configs:
   - job_name: 'prometheus'
-    scrape_interval: 5s
     static_configs:
       - targets: ["localhost:9090"]
   - job_name: 'microservices'
-    scrape_interval: 5s
     static_configs:
       - targets:
           - 'auth-service:3000'
@@ -19,3 +20,4 @@ scrape_configs:
           - 'notification-service:3000'
           - 'tournament-service:3000'
           - 'user-service:3000'
+
