--- a/prometheus/conf_prod/prometheus.yml
+++ b/prometheus/conf_prod/prometheus.yml
@@ -7,7 +7,7 @@ rule_files:
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-      - targets: ["https://prometheus.transcendance.charles-poulain.ovh"]
+      - targets: ["prometheus.transcendance.charles-poulain.ovh"]
   - job_name: 'microservices'
     static_configs:
       - targets:
